--- a/src/views/Testimonials/Testimonials.scss
+++ b/src/views/Testimonials/Testimonials.scss
@@ -56,7 +56,7 @@
   }
 
   .testimonials_title {
-    font-size: 22px;
+    font-size: 30px;
     margin-top: 30px;
     text-align: center;
   }
